# sandbox-research

./: .gitattributes  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  bundle.ps1  setup.ps1
app/: Cargo.toml
app/src/: main.rs
driver/: Cargo.toml  driver.inx
driver/src/: device.rs  driver.rs  lib.rs
frontend/: Cargo.toml  build.rs
frontend/src/: app.rs  comms.rs  lib.rs  main.rs  util.rs
grpc-demo/: Cargo.toml
hooked/: Cargo.toml
hooked/src/: hooks.rs  lib.rs  types.rs
jail/: Cargo.toml  jail.inx
jail/src/: driver.rs  lib.rs
kmdf/exe/: Cargo.toml
proto/: sample.proto
sandboxdrv/: Cargo.toml  sandboxdrv.inx
sandboxdrv/src/: driver.rs
service/: Cargo.toml  build.rs
service/src/: main.rs
src/: inject.rs  ioctl.rs  lib.rs  profile.rs  status.rs
