[package]
name = "sandbox-research"
version = "0.0.1"
description = "An experiment on application sandboxing on Windows"
edition = "2021"
publish = false
repository = "https://github.com/aCursedComrade/sandbox-research"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
windows-sys = "0.52"
eframe = "0.26.2"
tonic = "0.11"
prost = "0.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.tokio]
version = "1.35.1"
features = ["macros", "rt-multi-thread"]

[build-dependencies]
tonic-build = "0.11"

[profile.dev]
lto = false

[profile.release]
lto = true
