[workspace]
resolver = "2"
members = [
    "hooked"
]

[workspace.dependencies]
minhook = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rev-toolkit = { git = "https://github.com/aCursedComrade/rev-toolkit.git" }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_System",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
]}

[package]
name = "sandbox-research"
version = "0.0.1"
description = "An experiment on application sandboxing on Windows"
edition = "2021"
publish = false
repository = "https://github.com/aCursedComrade/sandbox-research"
license = "MIT"

[lib]

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
windows-sys.workspace = true
rev-toolkit.workspace = true
eframe = "0.26.2"
tonic = "0.11"
prost = "0.12"
rand = "0.8.5"

[dependencies.tokio]
version = "1.35.1"
features = ["macros", "rt-multi-thread"]

[build-dependencies]
tonic-build = "0.11"

[profile.dev]
lto = false

[profile.release]
lto = true

[[bin]]
name = "box_ui"
test = false
bench = false

[[bin]]
name = "box_broker"
test = false
bench = false
