[package]
name = "frontend"
version = "0.0.1"
description = "User-mode application to interact with the sandbox"
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
windows-sys.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true

[dependencies.eframe]
version = "0.26.2"

[build-dependencies]
tonic-build.workspace = true
