[package]
name = "hooked"
version = "0.0.1"
description = "Hooking library"
edition = "2021"
publish = false
repository = "https://github.com/aCursedComrade/sandbox-research"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
rev-toolkit.workspace = true
windows-sys.workspace = true
minhook.workspace = true
sandbox-research = { path = "../" }
