[package]
name = "jail"
version = "0.0.1"
description = "Driver that is used to implement application sandbox"
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.wdk]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
wdk.workspace = true
wdk-alloc.workspace = true
wdk-panic.workspace = true
wdk-sys.workspace = true

[build-dependencies]
wdk-build.workspace = true
