[package]
name = "service"
version = "0.0.1"
description = "Middleware service binary"
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
windows-sys.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true

[build-dependencies]
tonic-build.workspace = true
